--- a/Admission Form.html
+++ b/Admission Form.html
@@ -31,6 +31,33 @@
         <input style="margin-left: 97px;" type="email" placeholder="abc@xyz.com" />
         <br /><br />
         <hr />
+        <h1>Residential Information</h1>
+        <label>CITY NAME:</label>
+        <input type="text" placeholder="City Name" required />
+        <br /><br />
+        <label>PROVINCE:</label>
+        <select>
+            <option selected>Punjab</option>
+            <option>Sindh</option>
+            <option>KPK</option>
+            <option>Balochistan</option>
+        </select>
+        <br /><br />
+        <label>COUNTRY:</label>
+        <br /><br />
+        <select>
+            <option selected>USA</option>
+            <option>Pakistan</option>
+            <option>Canada</option>
+        </select>
+        <br /><br />
+        <label>GENDER:</label>
+        <br /><br />
+        <input type="radio" name="gender" /> MALE
+        <input type="radio" name="gender" /> FEMALE
+        <input type="radio" name="gender" /> OTHERS
+        <br /><br />
+        <hr />
     </form>    
 </body>
 </html>
