--- a/Admission Form.html
+++ b/Admission Form.html
@@ -10,7 +10,9 @@
     <form>
         <h1>J.K.M.B Mallick High School</h1>
         <h2>Admission Form</h2>
+
         <hr />
+
         <h1>Personal Information</h1>
         <label>NAME:</label>
         <input style="margin-left: 100px;" type="text" placeholder="Full Name" required />
@@ -30,7 +32,9 @@
         <label>EMAIL:</label>
         <input style="margin-left: 97px;" type="email" placeholder="abc@xyz.com" />
         <br /><br />
+
         <hr />
+
         <h1>Residential Information</h1>
         <label>CITY NAME:</label>
         <input type="text" placeholder="City Name" required />
@@ -57,7 +61,31 @@
         <input type="radio" name="gender" /> FEMALE
         <input type="radio" name="gender" /> OTHERS
         <br /><br />
+
         <hr />
+
+        <h1>Academic Information</h1>
+        <label>QUALIFICATION:</label>
+        <br /><br />
+        <input type="checkbox" name="province" />
+        <label>MATRIC COMPLETED</label>
+        <br /><br />
+        <input type="checkbox" name="province" />
+        <label>INTER COMPLETED</label>
+        <br /><br />
+        <label>CLASS:</label>
+        <input type="number" placeholder="Grade" required />
+        <br /><br />
+        <label>NAME OF OLD SCHOOL:</label>
+        <input type="text" placeholder="ABC High School" />
+        <br /><br />
+
+        <hr />
+
+        <button type="submit">SUBMIT</button>
+        <br /><br />
+        <button type="reset">RESET</button>
+        <br /><br />
     </form>    
 </body>
 </html>
