--- a/Admission Form.html
+++ b/Admission Form.html
@@ -10,9 +10,7 @@
     <form>
         <h1>J.K.M.B Mallick High School</h1>
         <h2>Admission Form</h2>
-
         <hr />
-
         <h1>Personal Information</h1>
         <label>NAME:</label>
         <input style="margin-left: 100px;" type="text" placeholder="Full Name" required />
@@ -32,9 +30,7 @@
         <label>EMAIL:</label>
         <input style="margin-left: 97px;" type="email" placeholder="abc@xyz.com" />
         <br /><br />
-
         <hr />
-
         <h1>Residential Information</h1>
         <label>CITY NAME:</label>
         <input type="text" placeholder="City Name" required />
@@ -57,13 +53,14 @@
         <br /><br />
         <label>GENDER:</label>
         <br /><br />
-        <input type="radio" name="gender" /> MALE
-        <input type="radio" name="gender" /> FEMALE
-        <input type="radio" name="gender" /> OTHERS
+        <input type="radio" name="gender" /> 
+        <label>MALE</label>
+        <input type="radio" name="gender" /> 
+        <label>FEMALE</label>
+        <input type="radio" name="gender" /> 
+        <label>OTHERS</label> 
         <br /><br />
-
         <hr />
-
         <h1>Academic Information</h1>
         <label>QUALIFICATION:</label>
         <br /><br />
@@ -79,9 +76,7 @@
         <label>NAME OF OLD SCHOOL:</label>
         <input type="text" placeholder="ABC High School" />
         <br /><br />
-
         <hr />
-
         <button type="submit">SUBMIT</button>
         <br /><br />
         <button type="reset">RESET</button>
